--- a/myqtt-web-socket-1.0.pc.in
+++ b/myqtt-web-socket-1.0.pc.in
@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: myqtt-web-socket-1.0
 Description: WebSocket support for MyQtt, a high performance open source MQTT implementation
-Requires: myqtt-1.0
+Requires: myqtt-1.0 nopoll
 Version: @MYQTT_VERSION@
 Libs: -L${libdir} -lmyqtt-web-socket-1.0 @PTHREAD_LIBS@
 Cflags: -I${includedir}/myqtt-1.0 @PTHREAD_CFLAGS@ -DENABLE_WEBSOCKET_SUPPORT
