myqtt: * [fix] Updated test_17.conf to include additional declarations..

--- a/server/test_17.conf
+++ b/server/test_17.conf
@@ -132,6 +132,11 @@
 	    users-db="reg-test-17/users">
     </domain>
 
+    <domain name="non-anonymous" 
+	    storage="reg-test-01/storage" 
+	    users-db="reg-test-01/users">
+    </domain>
+
   </myqtt-domains>
   
 </myqtt>
