--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -7,7 +7,8 @@ EXTRA_DIST = myqttd-ctx-private.h myqtt.example.conf \
 	test_12.conf \
 	test_15.conf \
 	test_16.conf \
-	test_17.conf
+	test_17.conf \
+	test_18.conf
 
 etcdir = $(sysconfdir)/myqtt
 etc_DATA = myqtt.example.conf
