myqtt: * [fix] Updated MyQttD regression tests (test_19) to check user   defined acls..

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -8,7 +8,8 @@ EXTRA_DIST = myqttd-ctx-private.h myqtt.example.conf \
 	test_15.conf \
 	test_16.conf \
 	test_17.conf \
-	test_18.conf
+	test_18.conf \
+	test_19.conf
 
 etcdir = $(sysconfdir)/myqtt
 etc_DATA = myqtt.example.conf
