--- a/server/modules/Makefile.am
+++ b/server/modules/Makefile.am
@@ -1,3 +1,7 @@
+if ENABLE_MYSQL_SUPPORT
+MOD_AUTH_MYSQL_DIR = mod-auth-mysql
+endif
+
 if ENABLE_TLS_SUPPORT
 TLS_SUPPORT_DIR = mod-ssl
 endif
@@ -6,7 +10,7 @@ if ENABLE_WEBSOCKET_SUPPORT
 WEBSOCKET_SUPPORT_DIR = mod-web-socket
 endif
 
-SUBDIRS = mod-auth-xml $(TLS_SUPPORT_DIR) $(WEBSOCKET_SUPPORT_DIR) mod-status mod-test
+SUBDIRS = mod-auth-xml $(TLS_SUPPORT_DIR) $(WEBSOCKET_SUPPORT_DIR) $(MOD_AUTH_MYSQL_DIR) mod-status mod-test
 
 install-exec-hook:
 	mkdir -p $(sysconfdir)/myqtt/mods-enabled
