myqtt: * [fix] Committing first fully working and tested mod-auth-mysql module to   support using a MySQL backend for MyQttd authentication and acl checking.

--- a/server/modules/mod-auth-mysql/Makefile.am
+++ b/server/modules/mod-auth-mysql/Makefile.am
@@ -1,12 +1,17 @@
+if ENABLE_TLS_SUPPORT
+INCLUDE_TLS_FLAGS=-DENABLE_TLS_SUPPORT $(TLS_CFLAGS) -I$(top_srcdir)/tls
+INCLUDE_TLS_LIBS=$(TLS_LIBS) $(top_builddir)/tls/libmyqtt-tls-1.0.la 
+endif
+
 EXTRA_DIST = mod-auth-mysql.xml  
 
 INCLUDES = -Wall -g -ansi -I../.. -I../../../lib/ -DCOMPILATION_DATE=`date +%s` \
 	   -DVERSION=\"$(MYQTTD_VERSION)\" \
-	   $(AXL_CFLAGS) $(MYQTT_CFLAGS) $(EXARG_CFLAGS) $(MYSQL_CFLAGS)
+	   $(AXL_CFLAGS) $(MYQTT_CFLAGS) $(EXARG_CFLAGS) $(MYSQL_CFLAGS) $(INCLUDE_TLS_FLAGS)
 
 lib_LTLIBRARIES      = mod-auth-mysql.la
 mod_auth_mysql_la_SOURCES  = mod-auth-mysql.c 
-mod_auth_mysql_la_LDFLAGS  = -module -ldl $(MYSQL_LIBS)
+mod_auth_mysql_la_LDFLAGS  = -module -ldl $(MYSQL_LIBS) $(INCLUDE_TLS_LIBS)
 
 # reconfigure module installation directory
 libdir = $(prefix)/lib/myqtt/modules
@@ -14,3 +19,7 @@ libdir = $(prefix)/lib/myqtt/modules
 # configure site module installation
 modconfdir   = $(sysconfdir)/myqtt/mods-available
 modconf_DATA = mod-auth-mysql.xml
+
+# configure site module installation
+configdir   = $(sysconfdir)/myqtt/mysql
+config_DATA = mysql.example.xml
