myqtt: * [fix] Updated myqttd-handlers module to include new parameters   for the following handlers:
  - MyQttdUsersAuthUser
  - MyQttdUsersExists
  - MyQttdUsersLoadDb

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -51,7 +51,7 @@ test_01_SOURCES = test_01.c test_01.h
 
 test_01_LDFLAGS = -Wl,-export-dynamic -ldl
 
-test_01_LDADD = $(AXL_LIBS) $(INCLUDE_TLS_LIBS) $(INCLUDE_WEBSOCKET_LIBS) libmyqttd.la $(top_builddir)/lib/libmyqtt-1.0.la 
+test_01_LDADD = $(AXL_LIBS) $(INCLUDE_TLS_LIBS) $(INCLUDE_WEBSOCKET_LIBS) libmyqttd.la $(top_builddir)/lib/libmyqtt-1.0.la $(top_builddir)/server/modules/mod-auth-mysql/mod-auth-mysql.la
 
 lib_LTLIBRARIES  = libmyqttd.la
 
