myqtt: * [fix] Updated myqttd on connect handling to implement a reply pause (by default   4 seconds) when a login failure is found to disable brute force attacks   and the like. Added documentation to default configuration file to explain   how to use it.
* [fix] Updated myqttd-config module to provide a function to allow checking
  the existance of a given path and attribute. API added:

  - myqttd_config_exists_attr

--- a/server/myqtt.example.conf
+++ b/server/myqtt.example.conf
@@ -96,6 +96,14 @@
       <!-- <path name="datadir" value="/usr/share" /> -->
     </system-paths>
 
+    <!-- when login failure detected, implement an artificial pause to
+         break brute force attacks and similar. In general this is a
+         good idea because it only affects systems with wrong
+         configuration. In the case you are running a
+         private/protected configuration, you can disable this by
+         setting it to value='0' -->
+    <login-failure-pause value="4" />
+
   </global-settings>
 
   <modules>
