--- a/server/test_20.conf
+++ b/server/test_20.conf
@@ -91,6 +91,8 @@
       <path name="sysconfdir" value="reg-test-20/etc" />
     </system-paths>
 
+    <login-failure-pause value="4" />
+
   </global-settings>
 
   <modules>
