myqttd: * [fix] Several updates to make internal myqttd domain handling to have   an "is_active" state that can be configured at configuration files and   by default enabled. This is going to be used by dynamic domain loading   to enable/disable already loaded domains.

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -9,7 +9,9 @@ EXTRA_DIST = myqttd-ctx-private.h myqtt.example.conf \
 	test_16.conf \
 	test_17.conf \
 	test_18.conf \
-	test_19.conf
+	test_19.conf \
+	test_20.conf \
+	test_21.conf
 
 etcdir = $(sysconfdir)/myqtt
 etc_DATA = myqtt.example.conf
