--- a/server/myqtt.example.conf
+++ b/server/myqtt.example.conf
@@ -195,12 +195,12 @@
          if you don't want to have anonymous login supported, or place
          it at the end so rest of domains are first checked before
          anonymous one -->
-    <domain name="anonymous" storage="/var/lib/myqtt/anonymous" users-db="/var/lib/myqtt-dbs/anonymous" use-settings="no-limits" />
+    <domain name="anonymous" storage="/var/lib/myqtt/anonymous" users-db="/var/lib/myqtt-dbs/anonymous" use-settings="no-limits" is-active="yes" />
 
     <!-- simple declaration for a domain with a set of users
          (users-db) and where it is storing messages in transit
          (storage) -->
-    <domain name="example.com" storage="/var/lib/myqtt/example.com" users-db="/var/lib/myqtt-dbs/example.com" use-settings="basic" />
+    <domain name="example.com" storage="/var/lib/myqtt/example.com" users-db="/var/lib/myqtt-dbs/example.com" use-settings="basic" is-active="yes" />
     
     <!-- include more domain declarations from the following directory -->
     <include dir="/etc/myqtt/domains.d/" />
