myqtt: * [fix] Added additional updates to test_21 to check configuration   (domain and settings) reloading...

--- a/server/test_21.conf
+++ b/server/test_21.conf
@@ -123,6 +123,21 @@
 	       followed.   -->
 	  <disable-wildcard-support value="no" />
       </global-settings>
+
+      <domain-setting name="basic">
+	<conn-limit value="10" /> <!-- amount of concurrent connections -->
+	<message-size-limit value="32768" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
+	<storage-messages-limit value="10000" /> <!-- max amount of messages in storage, use -1 for no limits -->
+	<storage-quota-limit value="102400" /> <!-- max amount of space used (100MB) -->
+      </domain-setting>
+
+      <domain-setting name="standard">
+	<conn-limit value="20" /> <!-- amount of concurrent connections -->
+	<message-size-limit value="32768" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
+	<storage-messages-limit value="10000" /> <!-- max amount of messages in storage, use -1 for no limits -->
+	<storage-quota-limit value="102400" /> <!-- max amount of space used (100MB) -->
+      </domain-setting>
+      
   </domain-settings>
 
   <!-- myqtt domains: list of group of myqtt users/devices we accept
