myqtt: * [fix] Finished working support to dynamically load new domains   and users into a running process (myqttd). Added regression test (test_21)   that combines mod-auth-mysql

--- a/server/test_21.conf
+++ b/server/test_21.conf
@@ -98,7 +98,8 @@
   <modules>
     
     <!-- directory where to find modules to load -->
-    <!-- <directory src="reg-test-21/modules" />  -->
+    <!-- reuse mod-auth-mysql module to check enabled domain -->
+    <directory src="reg-test-20/modules" /> 
     <!-- alternative directory -->
     <!-- <directory src="../mods-enabled" />  -->
     <no-load>
