--- a/server/myqtt.example.conf
+++ b/server/myqtt.example.conf
@@ -159,30 +159,9 @@
 	  <disable-wildcard-support value="no" />
       </global-settings>
 
-      <!-- now group of settings -->
-      <!-- settings for basic domains -->
-      <domain-setting name="basic">
-	<conn-limit value="5" /> <!-- amount of concurrent connections -->
-	<message-size-limit value="32768" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
-	<storage-messages-limit value="10000" /> <!-- max amount of messages in storage, use -1 for no limits -->
-	<storage-quota-limit value="102400" /> <!-- max amount of space used (100MB) -->
-      </domain-setting>
-      
-      <!-- settings for standard domains -->
-      <domain-setting name="standard">
-      	<conn-limit value="10" /> <!-- amount of concurrent connections -->
-	<message-size-limit value="65536" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
-	<storage-messages-limit value="20000" /> <!-- max amount of messages in storage, use -1 for no limits -->
-	<storage-quota-limit value="204800" /> <!-- max amount of space used (200MB), value in KB -->
-      </domain-setting>
+      <!-- include myqtt plans from the following directory -->
+      <include dir="/etc/myqtt/plans.d/" />
 
-      <!-- settings for standard domains -->
-      <domain-setting name="no-limits">
-      	<conn-limit value="-1" /> <!-- Use -1 for no limits: amount of concurrent connections -->
-	<message-size-limit value="-1" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
-	<storage-messages-limit value="-1" /> <!-- max amount of messages in storage, use -1 for no limits -->
-	<storage-quota-limit value="-1" /> <!-- max amount of space used (200MB), value in KB -->
-      </domain-setting>
   </domain-settings>
 
 
