--- a/server/test_17.conf
+++ b/server/test_17.conf
@@ -85,7 +85,7 @@
     -->
     <thread-pool max-limit="40" step-period="5" step-add="1" />
 
-    <running-user uid="myqttd" gid="myqttd" />
+    <!-- <running-user uid="myqttd" gid="myqttd" /> -->
 
   </global-settings>
 
