--- a/server/test_21.conf
+++ b/server/test_21.conf
@@ -85,7 +85,7 @@
     -->
     <thread-pool max-limit="40" step-period="5" step-add="1" />
 
-    <running-user uid="myqttd" gid="myqttd" />
+    <!-- <running-user uid="myqttd" gid="myqttd" /> -->
 
     <system-paths>
       <path name="sysconfdir" value="reg-test-20/etc" />
