myqtt: * [fix] Updated myqtt.example.conf to remove by default <running-user>   declaration..

--- a/server/myqtt.example.conf
+++ b/server/myqtt.example.conf
@@ -83,7 +83,7 @@
     -->
     <thread-pool max-limit="40" step-period="5" step-add="1" />
 
-    <running-user uid="myqttd" gid="myqttd" />
+    <!-- <running-user uid="myqttd" gid="myqttd" /> -->
 
     <system-paths>
       <!-- override runtime-datadir configuration: by default /var/lib -->
