--- a/server/basic.conf
+++ b/server/basic.conf
@@ -5,4 +5,6 @@
   <message-size-limit value="32768" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
   <storage-messages-limit value="10000" /> <!-- max amount of messages in storage, use -1 for no limits -->
   <storage-quota-limit value="102400" /> <!-- max amount of space used (100MB) -->
+  <month-message-quota value="-1" /> <!-- max amount of messages that can be send globally. -1 for no limits   -->
+  <day-message-quota value="-1" /> <!-- max amount of messages that can be send globally. -1 for no limits -->
 </domain-setting>
