--- a/server/standard.conf
+++ b/server/standard.conf
@@ -4,4 +4,6 @@
   <message-size-limit value="65536" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
   <storage-messages-limit value="20000" /> <!-- max amount of messages in storage, use -1 for no limits -->
   <storage-quota-limit value="204800" /> <!-- max amount of space used (200MB), value in KB -->
+  <month-message-quota value="-1" /> <!-- max amount of messages that can be send globally. -1 for no limits   -->
+  <day-message-quota value="-1" /> <!-- max amount of messages that can be send globally. -1 for no limits -->
 </domain-setting>
