--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -11,7 +11,8 @@ EXTRA_DIST = myqttd-ctx-private.h myqtt.example.conf skeleton.conf basic.conf st
 	test_18.conf \
 	test_19.conf \
 	test_20.conf \
-	test_21.conf
+	test_21.conf \
+	test_22.conf
 
 etcdir = $(sysconfdir)/myqtt
 etc_DATA = myqtt.example.conf
@@ -37,7 +38,7 @@ endif
 INCLUDES = $(compiler_options) -DCOMPILATION_DATE=`date +%s` -D__COMPILING_MYQTTD__ -D_POSIX_C_SOURCE  \
 	   -DMYQTT_VERSION=\"$(MYQTT_VERSION)\" -DVERSION=\"$(MYQTT_VERSION)\" -DAXL_VERSION=\"$(AXL_VERSION)\" -I$(top_srcdir)/lib \
 	   -DSYSCONFDIR=\""$(sysconfdir)"\" -DDEFINE_CHROOT_PROTO -DDEFINE_KILL_PROTO -DDEFINE_MKSTEMP_PROTO \
-	   -DMYQTTD_RUNTIME_DATADIR=\""$(runtimedatadir)"\" \
+	   -DMYQTTD_RUNTIME_DATADIR='"/var/lib/myqtt"' \
 	   -DMYQTTD_DATADIR=\""$(datadir)"\" $(INCLUDE_TERMIOS) $(EXARG_FLAGS) \
 	   -D__MYQTTD_ENABLE_DEBUG_CODE__ \
 	   $(AXL_CFLAGS)  -g -Wall -Werror -Wstrict-prototypes $(INCLUDE_TLS_FLAGS) $(INCLUDE_WEBSOCKET_FLAGS)
