myqtt: * [fix] Updated ssl.example.conf to include some indications about   debug='yes' variable..

--- a/server/modules/mod-ssl/ssl.example.conf
+++ b/server/modules/mod-ssl/ssl.example.conf
@@ -1,4 +1,6 @@
-<mod-ssl><!-- -*- nxml -*- -->
+<mod-ssl debug='no'><!-- -*- nxml -*- -->
+  <!-- set debug='yes' to have more information about the module
+       dropped into the log -->
   <certificates>
     <!-- <cert serverName="localhost" 
 	       crt="localhost.crt" 
